# muTopOpt

./: .gitignore  LICENSE  README.md  pyproject.toml  simulate.py
.github/workflows/: tests.yml
muTopOpt/: __init__.py  bounds.py  homogenization.py  loadcases.py  material.py  nodal.py  optimize.py  problem.py  properties.py  regularization.py  restart.py
test/: conftest.py  test_adaptive_tolerance.py  test_bounds.py  test_cg_hardening.py  test_consistent_objective.py  test_effective_properties.py  test_gradient.py  test_hessian.py  test_material.py  test_nodal.py  test_optimize_2d.py  test_restart.py  test_single_precision.py  test_trust_region.py
