[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "muTopOpt"
authors = [
    { name = "Martin Ladecky", email = "martin.ladecky@imtek.uni-freiburg.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
]
description = "FFT-accelerated FE topology optimization of mechanical metamaterials, built on muGrid"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy",
    # Single-precision (float32) solves need muGrid's dtype-threaded
    # preconditioner factories, which are on muGrid main but not yet in a PyPI
    # release; until the next release, install muGrid from source for float32
    # (double-precision solves work with the pinned release). CI builds muGrid
    # from main -- see .github/workflows/tests.yml.
    "muGrid>=0.110.0",
    "NuMPI",
]

[project.optional-dependencies]
test = ["pytest"]
scipy = ["scipy"]  # for the alternative serial optimize_lbfgs
mpi = ["mpi4py"]

[tool.flit.module]
name = "muTopOpt"
